# kbd-lang-switcher

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
assets/: resources.h  resources.rc
assets/nsis/: NSIS.definitions.nsh.in
src/: EventWindow.cpp  EventWindow.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SettingsStorage.cpp  SettingsStorage.hpp  app.cpp  app.hpp  defer.hpp  log-macro.hpp  logger-setup.cpp  logger-setup.hpp  loggerSetup.cpp  main.cpp  main_taskbar_icon.cpp  main_taskbar_icon.hpp  window.cpp  window.hpp  windows-keyboard-api.cpp  windows-keyboard-api.hpp
